--- a/index.html
+++ b/index.html
@@ -20,10 +20,26 @@
           <h3 class="header-logo inter">LOGO</h3>
           <a href=""><button class="button-primary raleway">Sign Up</button></a>
        </nav>
+
+       <div class="banner raleway">
+        <h1 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h1>
+        <a href=""><button class="button-stay">Stay Focused</button></a>
+       </div>
     </header>
 
     <main>
-
+        <section class="action">
+            <div class="action-area">
+                <div class="action-content">
+                    <h3 class="action-title raleway">See It in Action</h3>
+                    <p class="action-description raleway">Explore the live preview and imagine your brand in this bold new look.</p>
+                    <a class="raleway" href=""><button class="action-button ">Launch Live Preview</button></a>
+                </div>
+                <div class="action-image">
+                    <img src="assets/wc-mini.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
