action area done

--- a/index.html
+++ b/index.html
@@ -29,17 +29,40 @@
 
     <main>
         <section class="action">
-            <div class="action-area">
+            <div class="action-area raleway">
                 <div class="action-content">
                     <h3 class="action-title raleway">See It in Action</h3>
-                    <p class="action-description raleway">Explore the live preview and imagine your brand in this bold new look.</p>
-                    <a class="raleway" href=""><button class="action-button ">Launch Live Preview</button></a>
+                    <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
+                    <a href=""><button class="action-button ">Launch Live Preview</button></a>
                 </div>
                 <div class="action-image">
                     <img src="assets/wc-mini.png" alt="">
                 </div>
             </div>
         </section>
+        
+        <section>
+            <div class="productive">
+                 <div class="raleway">
+                    <h1 class="productive-user">Joined Thousands of Productive Users</h1>
+                </div>
+             <div class="productive-info inter">
+               <div>
+                 <h1 class="productive-title">50K</h1>
+                 <p class="productive-subtitle">Active Users</p>
+               </div>
+               <div>
+                 <h1 class="productive-title">2M+</h1>
+                 <p class="productive-subtitle">Focus Sessions</p>
+               </div>
+               <div>
+                 <h1 class="productive-title">95%</h1>
+               <p class="productive-subtitle">Satisfaction Rate</p>
+               </div>
+            </div>
+            </div>
+        </section>
+       
     </main>
 
     <footer>
