review area done

--- a/index.html
+++ b/index.html
@@ -62,6 +62,89 @@
             </div>
             </div>
         </section>
+
+      <section class="review">
+        <h3 class="review-header raleway">What our users say</h3>
+
+        <div class="review-portion">
+            <div class="review-box">
+                <div class="star-image">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+             </div>
+                 <div class="inter">
+                    <h4 class="review-title">Loved by Designers</h6>
+                    <p class="review-detail">
+                        This template instantly leveled up our presence.” - Studio Vertex
+                    </p>
+                </div>
+                  <div class="review-holder-detail inter">
+                    <div class="review-holder-image">
+                    <img src="assets/avatar.png" alt="">
+
+                </div>
+                <div>
+                  <p  class="review-holder-name">Reviewer name</p> 
+                  <p class="review-date">Date</p> 
+                </div>
+                 </div>
+                 </div>
+                 <div class="review-box">
+                <div class="star-image">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                </div>
+                <div class="inter">
+                    
+                    <h4 class="review-title">Loved by Designers</h6>
+                    <p class="review-detail">
+                        This template instantly leveled up our presence.” - Studio Vertex
+                    </p>
+                </div>
+                 <div class="review-holder-detail inter">
+                    <div class="review-holder-image">
+                    <img src="assets/avatar.png" alt="">
+
+                </div>
+                <div>
+                  <p  class="review-holder-name">Reviewer name</p> 
+                  <p class="review-date">Date</p> 
+                </div>
+                 </div>
+              </div>
+             <div class="review-box">
+                <div class="star-image">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                 <img src="assets/icon-star.png" alt="">
+                </div>
+                <div class="inter">
+                    <h4 class="review-title">Loved by Designers</h6>
+                    <p class="review-detail">
+                        This template instantly leveled up our presence.” - Studio Vertex
+                    </p>
+                </div>
+                <div class="review-holder-detail inter">
+                    <div class="review-holder-image">
+                    <img src="assets/avatar.png" alt="">
+
+                    </div>
+                <div>
+                  <p class="review-holder-name">Reviewer name</p> 
+                  <p class="review-date">Date</p> 
+                </div>
+                </div>
+                </div>
+        </div>
+      </section>
        
     </main>
 
