highlight area done

--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@
                 </div>
         </div>
       </section>
+
+      <section class="highlight-area raleway">
+        <h3 class="highlight-title">Ready to focus better</h3>
+        <p class="highlight-detail">This template instantly leveled up our presence.” – Studio Vertex</p>
+        <a href=""><button class="start-button">Ger Started Free</button></a>
+        <br>
+        <img src="assets/wc-big.png" alt="">
+      </section>
        
     </main>
 
