newletter area done

--- a/index.html
+++ b/index.html
@@ -149,9 +149,37 @@
       <section class="highlight-area raleway">
         <h3 class="highlight-title">Ready to focus better</h3>
         <p class="highlight-detail">This template instantly leveled up our presence.” – Studio Vertex</p>
-        <a href=""><button class="start-button">Ger Started Free</button></a>
+        <a href=""><button class="start-button">Get Started Free</button></a>
         <br>
         <img src="assets/wc-big.png" alt="">
+      </section>
+
+      <section>
+        <div class="newsletter">
+          <h3 class="newsletter-title raleway">Let’s Get in Touch</h3>
+          <div class="newsletter-info">
+            <form class="login-info inter"action="">
+             <div class="newsletter-for">
+               <label for="">Email</label>
+              <br>
+              <input type="email" name="" id="" placeholder="example@email.com">
+             </div>
+              <br>
+              <div class="newsletter-for">
+                <label for="">Name</label>
+              <br>
+              <input type="text" name="" id="" placeholder="full name">
+              </div>
+              <br>
+              <div class="newsletter-for">
+                <label for="">Message</label>
+              <br>
+              <textarea class ="inter" name="" id="" placeholder="write your message...."></textarea>
+              </div>
+            </form>
+            <a href=""><button class="newsletter-button raleway">Get in Touch</button></a>
+          </div>
+        </div>
       </section>
        
     </main>
