almost done all things

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <header class="header">
        <nav class="header-nav">
           <h3 class="header-logo inter">LOGO</h3>
-          <a href=""><button class="button-primary raleway">Sign Up</button></a>
+          <a href=""><button class="button-primary button-cursor raleway">Sign Up</button></a>
        </nav>
 
        <div class="banner raleway">
         <h1 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h1>
-        <a href=""><button class="button-stay">Stay Focused</button></a>
+        <a href=""><button class="button-stay button-cursor">Stay Focused</button></a>
        </div>
     </header>
 
@@ -33,7 +33,7 @@
                 <div class="action-content">
                     <h3 class="action-title raleway">See It in Action</h3>
                     <p class="action-description">Explore the live preview and imagine your brand in this bold new look.</p>
-                    <a href=""><button class="action-button ">Launch Live Preview</button></a>
+                    <a href=""><button class="action-button button-cursor ">Launch Live Preview</button></a>
                 </div>
                 <div class="action-image">
                     <img src="assets/wc-mini.png" alt="">
@@ -149,7 +149,7 @@
       <section class="highlight-area raleway">
         <h3 class="highlight-title">Ready to focus better</h3>
         <p class="highlight-detail">This template instantly leveled up our presence.” – Studio Vertex</p>
-        <a href=""><button class="start-button">Get Started Free</button></a>
+        <a href=""><button class="start-button button-cursor">Get Started Free</button></a>
         <br>
         <img src="assets/wc-big.png" alt="">
       </section>
@@ -177,15 +177,24 @@
               <textarea class ="inter" name="" id="" placeholder="write your message...."></textarea>
               </div>
             </form>
-            <a href=""><button class="newsletter-button raleway">Get in Touch</button></a>
+            <a href=""><button class="newsletter-button raleway button-cursor">Get in Touch</button></a>
           </div>
         </div>
       </section>
        
     </main>
 
-    <footer>
-
+    <footer class="inter">
+      <h1>LOGO</h1>
+      <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+      <div class="footer-link">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">How it Works</a></li>
+          <li><a href="">Services</a></li>
+        </ul>
+      </div>
     </footer>
 </body>
 </html>
